print user account info

--- a/Tweet/Localizable.strings
+++ b/Tweet/Localizable.strings
@@ -47,7 +47,7 @@
 "Clear Media Cache" = "Clear Media Cache";
 "About" = "About";
 "Version" = "Version";
-"All image and tweet caches have been cleared successfully." = "All image and tweet caches have been cleared successfully.";
+"All caches, users, and tweets have been cleared successfully." = "All caches, users, and tweets have been cleared successfully.";
 "Cache Cleared" = "Cache Cleared";
 "Logout" = "Logout";
 "Dark Mode" = "Dark Mode";
