--- a/Tweet/Localizable.strings
+++ b/Tweet/Localizable.strings
@@ -399,6 +399,12 @@
 
 // MARK: - Video Player
 "Failed to load video" = "Failed to load video";
+
+// MARK: - Photo Library Access
+"This app needs access to your photo library to save captured photos and videos." = "This app needs access to your photo library to save captured photos and videos.";
+"This app uses the camera to allow you to take photos and record videos for your replies and tweets." = "This app uses the camera to allow you to take photos and record videos for your replies and tweets.";
+"This app uses the microphone to record audio for videos you create with the camera." = "This app uses the microphone to record audio for videos you create with the camera.";
+"This app uses notifications to alert you about new chat messages." = "This app uses notifications to alert you about new chat messages.";
 "Loading HLS stream..." = "Loading HLS stream...";
 
 // MARK: - Media Grid
