--- a/Tweet/ja.lproj/Localizable.strings
+++ b/Tweet/ja.lproj/Localizable.strings
@@ -331,6 +331,12 @@
 
 // MARK: - Video Player
 "Failed to load video" = "動画の読み込みに失敗しました";
+
+// MARK: - Photo Library Access
+"This app needs access to your photo library to save captured photos and videos." = "このアプリは撮影した写真と動画を保存するために、フォトライブラリへのアクセスが必要です。";
+"This app uses the camera to allow you to take photos and record videos for your replies and tweets." = "このアプリは返信やツイート用の写真撮影と動画録画のためにカメラを使用します。";
+"This app uses the microphone to record audio for videos you create with the camera." = "このアプリはカメラで作成した動画の音声録音のためにマイクを使用します。";
+"This app uses notifications to alert you about new chat messages." = "このアプリは新しいチャットメッセージをお知らせするために通知を使用します。";
 "Loading HLS stream..." = "HLSストリームを読み込み中...";
 
 // MARK: - Media Grid
