--- a/Tweet/InfoPlist.strings
+++ b/Tweet/InfoPlist.strings
@@ -5,4 +5,8 @@
   Created for app name localization.
 */
 
-CFBundleDisplayName = "Tweet";
+CFBundleDisplayName = "dTweet";
+NSCameraUsageDescription = "dTweet needs camera access to let you capture photos and videos for your tweets and replies. You can create rich media content to share with your followers.";
+NSMicrophoneUsageDescription = "dTweet needs microphone access to record audio when you create video tweets and replies. This allows you to add voice narration to your video content.";
+NSPhotoLibraryUsageDescription = "dTweet needs photo library access to save your captured photos and videos, and to let you select existing media for your tweets and replies.";
+NSUserNotificationUsageDescription = "dTweet uses notifications to keep you updated about new chat messages, mentions, and important updates from your network.";
